--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     margin-bottom: 10px;
 }
 
-.numpad-conatiner{
+.numpad-container{
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -27,8 +27,6 @@
     height: 87px;
     background-color: cadetblue;
     text-align: center;
-    
-
 }
 
 .key-mouse-over{
