--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
     background-color: cadetblue;
     align-items: center;
     justify-content: center;
+    font-size: 30px;
 }
 
 .key-mouse-over{
